replace immutable collections with collection factory call